# traductor

./: traductor.cabal
scripts/: deploy-haddock-manually.sh
src/: Main.hs
