name:                traductor
version:             0.1.0.0
synopsis:            An IRC bot which makes use of glosbe's API.
-- description:
homepage:            https://github.com/relrod/traductor
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2015 Ricky Elrod
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable traductor
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , http-client >= 0.4 && < 0.5
                     , http-types >= 0.8 && < 0.9
                     , html-entities >= 1.1 && < 2
                     , lens >= 4 && < 5
                     , lens-aeson >= 1 && < 2
                     , simpleirc >= 0.3 && < 1
                     , simpleirc-lens >= 0.1
                     , text >= 1 && < 2
                     , wreq >= 0.3 && < 1
  hs-source-dirs:      src
  default-language:    Haskell2010